--- a/.github/workflows/kavach-scan.yml
+++ b/.github/workflows/kavach-scan.yml
@@ -36,16 +36,25 @@ jobs:
 
       - name: Run CodeQL Analysis
         uses: github/codeql-action/analyze@v2
+        
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
-  self-hosted-job:
-    name: Self-Hosted Job
-    runs-on: self-hosted
-    needs: codeql
+  # self-hosted-job:
+  #   name: Self-Hosted Job
+  #   runs-on: self-hosted
+  #   needs: codeql
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v2
 
-      - name: Run a script on Self-Hosted Runner
-        run: |
-          echo "Running on self-hosted runner"
+  #     - name: Run a script on Self-Hosted Runner
+  #       run: |
+  #         echo "Running on self-hosted runner"
