--- a/.github/workflows/kavach-scan.yml
+++ b/.github/workflows/kavach-scan.yml
@@ -34,10 +34,29 @@ jobs:
       - name: Autobuild
         uses: github/codeql-action/autobuild@v2
 
-      - name: Run CodeQL Analysis
+      - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
-        
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          output: results.sarif
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: results.sarif
+          
+      - name: Parse CodeQL Results
+        id: parse_results
+        run: |
+          # Use jq to parse the SARIF file and count the severity levels
+          CRITICAL_COUNT=$(jq '[.runs[].results[] | select(.level == "error" and .properties.severity == "critical")] | length' results.sarif)
+          HIGH_COUNT=$(jq '[.runs[].results[] | select(.level == "error" and .properties.severity == "high")] | length' results.sarif)
+          WARNING_COUNT=$(jq '[.runs[].results[] | select(.level == "warning")] | length' results.sarif)
+
+          echo "critical_count=${CRITICAL_COUNT}" >> $GITHUB_ENV
+          echo "high_count=${HIGH_COUNT}" >> $GITHUB_ENV
+          echo "warning_count=${WARNING_COUNT}" >> $GITHUB_ENV
+
+      # - name: Upload coverage reports to Codecov
+      #   uses: codecov/codecov-action@v4.0.1
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
