--- a/.github/workflows/kavach-scan.yml
+++ b/.github/workflows/kavach-scan.yml
@@ -38,11 +38,13 @@ jobs:
         uses: github/codeql-action/analyze@v2
         with:
           output: results.sarif
+          category: cap_an
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: results.sarif
+          category: cap_an
           
       - name: Parse CodeQL Results
         id: parse_results
